added serverless functions

--- a/client/src/style/_consts.scss
+++ b/client/src/style/_consts.scss
@@ -10,7 +10,9 @@ $left-width: 220px;
 
 $primary: #75c28c;
 $light:#eff1f8;
+$info: #5882FA;
 $theme-colors: ("primary": $primary,
+"info":$info,
 "light":$light);
 
 $light-bg-border-color: rgba(0, 0, 0, 0.05);
